--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 language: clojure
-script: CLOVERAGE_VERSION=1.0.9 lein cloverage --codecov
-after_success:
-  - bash <(curl -s https://codecov.io/bash) -f target/coverage/codecov.json
+before_script: lein ancient
+script: lein test
